# rust-api

./: .env  Cargo.toml
migrations/: 20240527205110_create_users.sql
src/: db_context.rs  main.rs
src/body/: create_user_body.rs  mod.rs  update_user_body.rs
src/controller/: mod.rs  user_controller.rs
src/entity/: user.rs
src/repository/: user_repository.rs
src/service/: user_service.rs
