[package]
name = "untitled5"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.6.0"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio"] }
serde_json = "1.0.117"
serde = { version = "1.0.203", features = ["derive"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
dotenvy = "0.15.7"